<resources>
    <string name="app_name">Super Bowl LII Score Keeper</string>

    <string name="eagles">Eagles</string>
    <string name="patriots">Patriots</string>
    <string name="superbowl_logo">Superbowl Logo</string>

    <string name="score">0</string>

    <string name="touchdown">Touchdown</string>
    <string name="conversion">Extra Point</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety /\n2-Point Conversion</string>
    <string name="reset">Reset</string>
</resources>
